--- a/server_framework_101/estate/views/estate_property_views.xml
+++ b/server_framework_101/estate/views/estate_property_views.xml
@@ -3,7 +3,7 @@
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Estate Property</field>
         <field name="res_model">estate.property</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">list,form,kanban</field>
         <field name="domain">[]</field>
         <!-- <field name="context">{'active_test': False}</field> -->
         <field name="help" type="html">
@@ -125,6 +125,40 @@
                 <filter name="filter_available" string="Available" domain="[('state', '=', 'new')]" />
                 <filter name="filter_active" string="Active" domain="[('active', '=', True)]" />
             </search>
+        </field>
+    </record>
+
+    <record id="estate_property_view_kanban" model="ir.ui.view">
+        <field name="name">estate.property.view.kanban</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="property_type_id" disable_drag="1">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click o_kanban_record">
+                            <div class="o_kanban_details">
+                                <strong>
+                                    <field name="name" />
+                                </strong>
+                                <br />
+                                <field name="state" />
+                                <div>Expected price: <field name="expected_price" /></div>
+                                <t
+                                    t-if="record.state and record.state.raw_value == 'offer_received'">
+                                    <div>Best offer: <field name="best_price" /></div>
+                                </t>
+                                <t
+                                    t-if="record.state and record.state.raw_value == 'offer_accepted'">
+                                    <div>Selling price: <field name="selling_price" /></div>
+                                </t>
+                                <div>
+                                    <field name="property_tag_ids" widget="many2many_tags" />
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
         </field>
     </record>
 </odoo>
