--- a/server_framework_101/estate/views/estate_property_offer_views.xml
+++ b/server_framework_101/estate/views/estate_property_offer_views.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="estate_property_offer_action" model="ir.actions.act_window">
-        <field name="name">Property Offers</field>
+    <record id="estate_property_offer_action_view_list" model="ir.actions.act_window">
+        <field name="name">Offers</field>
         <field name="res_model">estate.property.offer</field>
         <field name="view_mode">list,form</field>
         <field name="domain">[('property_type_id', '=', active_id)]</field>
     </record>
 
     <record id="estate_property_offer_view_list" model="ir.ui.view">
-        <field name="name">estate.property.offer.list</field>
+        <field name="name">estate.property.offer.view.list</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
             <list string="Offers" editable='top'
@@ -28,7 +28,7 @@
     </record>
 
     <record id="estate_property_offer_view_form" model="ir.ui.view">
-        <field name="name">estate.property.offer.form</field>
+        <field name="name">estate.property.offer.view.form</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
             <form string="">
