--- a/server_framework_101/estate/views/estate_property_tag_views.xml
+++ b/server_framework_101/estate/views/estate_property_tag_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="estate_property_tag_action" model="ir.actions.act_window">
-        <field name="name">Property Tag</field>
+    <record id="estate_property_tag_action_view_list" model="ir.actions.act_window">
+        <field name="name">Tags</field>
         <field name="res_model">estate.property.tag</field>
         <field name="view_mode">list,form</field>
         <field name="help" type="html">
@@ -16,7 +16,7 @@
     </record>
 
     <record id="estate_property_tag_view_list" model="ir.ui.view">
-        <field name="name">estate.property.tag.list</field>
+        <field name="name">estate.property.tag.view.list</field>
         <field name="model">estate.property.tag</field>
         <field name="arch" type="xml">
             <list string="Tags" editable='top'>
