--- a/server_framework_101/estate/views/estate_property_type_views.xml
+++ b/server_framework_101/estate/views/estate_property_type_views.xml
@@ -2,8 +2,8 @@
 <odoo>
 
     <!-- Window action -->
-    <record id="estate_property_type_action" model="ir.actions.act_window">
-        <field name="name">Property Type</field>
+    <record id="estate_property_type_action_view_list" model="ir.actions.act_window">
+        <field name="name">Property Types</field>
         <field name="res_model">estate.property.type</field>
         <field name="view_mode">list,form</field>
         <field name="help" type="html">
@@ -17,7 +17,7 @@
     </record>
 
     <record id="estate_property_type_view_list" model="ir.ui.view">
-        <field name="name">estate.property.type.list</field>
+        <field name="name">estate.property.type.view.list</field>
         <field name="model">estate.property.type</field>
         <field name="arch" type="xml">
             <list string="Property Types">
@@ -29,13 +29,13 @@
 
     <!-- Form view -->
     <record id="estate_property_type_view_form" model="ir.ui.view">
-        <field name="name">estate.property.type.form</field>
+        <field name="name">estate.property.type.view.form</field>
         <field name="model">estate.property.type</field>
         <field name="arch" type="xml">
             <form string="Property Types">
                 <div class="oe_button_box" name="button_box">
                     <button class="oe_stat_button" type="action"
-                        name="%(estate_property_offer_action)d" icon="fa-envelope">
+                        name="%(estate_property_offer_action_view_list)d" icon="fa-envelope">
                         <field name="offer_count" widget="statinfo" string="Offers" />
                     </button>
                 </div>
