--- a/server_framework_101/estate/views/estate_property_views.xml
+++ b/server_framework_101/estate/views/estate_property_views.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="estate_property_action" model="ir.actions.act_window">
-        <field name="name">Estate Property</field>
+    <record id="estate_property_action_view_list" model="ir.actions.act_window">
+        <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">list,form,kanban</field>
         <field name="domain">[]</field>
-        <!-- <field name="context">{'active_test': False}</field> -->
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your first estate property!
@@ -18,7 +17,7 @@
 
     <!-- List view -->
     <record id="estate_property_view_list" model="ir.ui.view">
-        <field name="name">estate.property.list</field>
+        <field name="name">estate.property.view.list</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <list string="Properties" create="true" edit="true"
@@ -40,7 +39,7 @@
 
     <!-- Form view with active field -->
     <record id="estate_property_view_form" model="ir.ui.view">
-        <field name="name">estate.property.form</field>
+        <field name="name">estate.property.view.form</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <form string="Property Form" create="true" edit="true">
@@ -111,7 +110,7 @@
 
     <!-- Search view -->
     <record id="estate_property_view_search" model="ir.ui.view">
-        <field name="name">estate.property.search</field>
+        <field name="name">estate.property.view.search</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
             <search>
