--- a/server_framework_101/estate/views/res_user_views.xml
+++ b/server_framework_101/estate/views/res_user_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="users_form_estate_inherited_view" model="ir.ui.view">
-        <field name="name">res.users.form.inherit.estate</field>
+    <record id="estate.view_users_form_inherit" model="ir.ui.view">
+        <field name="name">estate.view.users.form</field>
         <field name="model">res.users</field>
         <field name="inherit_id" ref="base.view_users_form" />
         <field name="arch" type="xml">
