Update kanban template to use 'card' instead of deprecated 'kanban-box'

--- a/server_framework_101/estate/views/estate_property_views.xml
+++ b/server_framework_101/estate/views/estate_property_views.xml
@@ -133,7 +133,7 @@
         <field name="arch" type="xml">
             <kanban default_group_by="property_type_id" disable_drag="1">
                 <templates>
-                    <t t-name="kanban-box">
+                    <t t-name="card">
                         <div class="oe_kanban_global_click o_kanban_record">
                             <div class="o_kanban_details">
                                 <strong>
