--- a/server_framework_101/estate/views/estate_menus.xml
+++ b/server_framework_101/estate/views/estate_menus.xml
@@ -1,41 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Main Menu -->
-    <menuitem id="estate_menu_root"
-        name="Real Estate"
-        sequence="10" />
-
-    <!-- Submenu -->
-    <menuitem id="advertisement_menu"
-        name="Advertisements"
-        parent="estate_menu_root"
-        sequence="10" />
-
-    <menuitem
-        id="settings_menu"
-        name="Settings"
-        parent="estate_menu_root"
-        sequence="20" />
-
-    <!-- Menu items -->
-    <menuitem
-        id="estate_property_menu_action"
-        name="Properties"
-        parent="advertisement_menu"
-        action="estate_property_action_view_list"
-        sequence="10" />
-
-    <menuitem
-        id="estate_property_type_menu_action"
-        name="Property Types"
-        action="estate_property_type_action_view_list"
-        parent="settings_menu"
-        sequence="10" />
-
-    <menuitem
-        id="estate_property_tag_menu_action"
-        name="Property Tags"
-        action="estate_property_tag_action_view_list"
-        parent="settings_menu"
-        sequence="20" />
+    <menuitem id="estate_menu_root" name="Real Estate">
+        <menuitem id="advertisement_menu" name="Advertisements">
+            <menuitem id="estate_property_menu_action" name="Properties"
+                action="estate_property_action_view_list" />
+        </menuitem>
+        <menuitem id="settings_menu" name="Settings">
+            <menuitem id="estate_property_type_menu_action" name="Property Types"
+                action="estate_property_type_action_view_list" />
+            <menuitem id="estate_property_tag_menu_action" name="Property Tags"
+                action="estate_property_tag_action_view_list" />
+        </menuitem>
+    </menuitem>
 </odoo>
